<?xml version="1.0" encoding="utf-8"?>
<!--
The search dialog box
-->

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:showDividers="middle|beginning|end|none"
            android:columnCount="3"
            android:rowCount="6"
            android:nestedScrollingEnabled="false">


    <android.support.v4.widget.Space
        android:layout_row="0"
        />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_textBox"
        android:text="@string/search_type_search_keywords"
        android:lines="1"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:singleLine="true"/>

    <!-- Language row -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/search_language"
        android:id="@+id/search_language_label"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_languagesDropdown"
        android:entries="@array/search_language_list"
        android:layout_row="2"
        android:layout_column="2"
        />
    <!--
    -->
    <!-- Published on row -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="3"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/search_pub_in_past"
            android:id="@+id/search_pub_in_past_label"
            android:layout_row="3"
            android:layout_column="0"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_numberWeeksTextBox"
            android:ems="2"
            android:layout_row="3"
            android:layout_column="1"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:minLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/search_pub_in_past_weeks"
            android:id="@+id/search_pub_in_past_weeks_label"
            android:layout_row="3"
            android:layout_column="2"
            />
    </LinearLayout>

    <!-- audio/video checkboxes row -->
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_audio"
        android:id="@+id/search_audio_checkBox"
        android:layout_row="4"
        android:layout_column="0"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_video"
        android:id="@+id/search_video_checkBox"
        android:layout_row="4"
        android:layout_column="1"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_local"
        android:id="@+id/search_local_checkbox"
        android:layout_row="4"
        android:layout_column="2"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_cancel_button_label"
        android:id="@+id/search_cancel_button"
        android:layout_row="5"
        android:layout_column="1"
/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_search_button_label"
        android:id="@+id/search_search_button"
        android:layout_row="5"
        android:layout_column="2"
        />
    <!-- Buttons row -->


</GridLayout>


