<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:orientation="horizontal"
    tools:background="@android:color/darker_gray">

    <ImageView
        android:id="@+id/imgvImage"
        android:layout_width="@dimen/thumbnail_length_downloaded_item"
        android:layout_height="@dimen/thumbnail_length_downloaded_item"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/listitem_threeline_verticalpadding"
        android:layout_marginLeft="@dimen/listitem_threeline_horizontalpadding"
        android:layout_marginTop="@dimen/listitem_threeline_verticalpadding"
        android:contentDescription="@string/cover_label"
        android:scaleType="centerCrop"
        tools:background="@android:color/holo_green_dark" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginLeft="@dimen/listitem_threeline_textleftpadding"
        android:layout_marginRight="@dimen/listitem_threeline_textrightpadding"
        android:layout_marginTop="@dimen/listitem_threeline_verticalpadding"
        android:layout_weight="1"
        tools:background="@android:color/holo_red_dark">

        <TextView
            android:id="@+id/txtvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="4dp"
            tools:text="Downloaded episode title"
            tools:background="@android:color/holo_green_dark" />

        <TextView
            android:id="@+id/txtvSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            tools:text="23 MB"
            tools:background="@android:color/holo_green_dark" />

        <TextView
            android:id="@+id/txtvPublished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="8dp"
            tools:text="Jan 23"
            tools:background="@android:color/holo_green_dark" />

        <ImageView
            android:id="@+id/imgvInPlaylist"
            android:layout_width="@dimen/enc_icons_size"
            android:layout_height="@dimen/enc_icons_size"
            android:layout_toLeftOf="@id/txtvPublished"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/in_queue_label"
            android:visibility="visible"
            tools:background="@android:color/holo_red_light" />

    </RelativeLayout>

    <include layout="@layout/vertical_list_divider"/>

    <ImageButton
        android:id="@+id/butSecondaryAction"
        android:layout_width="@dimen/listview_secondary_button_width"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:clickable="false"
        android:contentDescription="@string/remove_episode_lable"
        android:focusable="false"
        android:focusableInTouchMode="false"
        tools:background="@android:color/holo_green_dark" />

</LinearLayout>